--- a/Solution/WebAppCodeFirst/appsettings.json
+++ b/Solution/WebAppCodeFirst/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionString": {
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=db-2020-03-28-02;Trusted_Connection=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
