--- a/Solution/WebAppCodeFirst/appsettings.json
+++ b/Solution/WebAppCodeFirst/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "ConnectionString": {
+  "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=db-2020-03-28-02;Trusted_Connection=True"
   },
   "Logging": {
